feat/custom css + project pattern

--- a/about.html
+++ b/about.html
@@ -10,22 +10,22 @@
     <link href="/styles/custom.css" rel="stylesheet">
 </head>
 <body class="bg-gray-50">
-<header class="bg-l-orange text-tan p-4">
+<header class="bg-p-blue text-tan p-4">
     <div class="container mx-auto">
         <img src="" alt="">
         <nav class="mt-2">
             <ul class="flex space-x-4">
                 <li>
-                    <a href="#inicio" class="hover:underline">Início</a>
+                    <a href="index.html#inicio" class="hover:underline">Início</a>
                 </li>
                 <li>
-                    <a href="#produtos" class="hover:underline">Produtos</a>
+                    <a href="index.html#produtos" class="hover:underline">Produtos</a>
                 </li>
                 <li>
-                    <a href="about.html" class="hover:underline">Sobre Nós</a>
+                    <a href="#sobre" class="hover:underline">Sobre Nós</a>
                 </li>
                 <li>
-                    <a href="about.html#contato" class="hover:underline">Contato</a>
+                    <a href="#contato" class="hover:underline">Contato</a>
                 </li>
             </ul>
         </nav>
@@ -33,20 +33,22 @@
 </header>
 
 <main class="container mx-auto p-4">
-    <section id="inicio" class="py-8">
-        <h2 class="text-3xl font-bold mb-4">Bem-vindo à Nico Eletro</h2>
-        <p class="text-gray-700">Sua loja de eletrônicos com as melhores ofertas e produtos de qualidade.</p>
+    <section id="sobre" class="py-8">
+        <h2 class="text-3xl font-bold mb-4">Sobre nós</h2>
+        <p class="text-gray-700">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.
+        </p>
     </section>
 
-    <section id="produtos" class="py-8">
-        <h2 class="text-2xl font-bold mb-4">Nossos Produtos</h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-4" id="produtos-lista">
-            <!-- Produtos serão carregados via JavaScript -->
-        </div>
+    <section id="contato" class="py-8">
+        <h2 class="text-2xl font-bold mb-4">Contate-nos</h2>
+        <p class="text-gray-700">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.
+        </p>
     </section>
 </main>
 
-<footer class="bg-d-orange text-tan p-4 mt-8">
+<footer class="bg-s-blue text-tan p-4 mt-8">
     <div class="container mx-auto text-center">
         <p>&copy; 2025 Nico Eletro - Todos os direitos reservados</p>
         <p class="text-sm text-tan mt-2">Projeto desenvolvido para o curso de Sistemas de Informação - UNIDAVI</p>
