--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <nav class="mt-2">
             <ul class="flex space-x-4">
                 <li>
-                    <a href="index.html#inicio" class="hover:underline">Início</a>
+                    <a href="index.html" class="hover:underline">Início</a>
                 </li>
                 <li>
                     <a href="index.html#produtos" class="hover:underline">Produtos</a>
