--- a/about.html
+++ b/about.html
@@ -10,26 +10,8 @@
     <link href="/styles/custom.css" rel="stylesheet">
 </head>
 <body class="bg-gray-50">
-<header class="bg-p-blue text-tan p-4">
-    <div class="container mx-auto">
-        <img src="" alt="">
-        <nav class="mt-2">
-            <ul class="flex space-x-4">
-                <li>
-                    <a href="index.html" class="hover:underline">Início</a>
-                </li>
-                <li>
-                    <a href="index.html#produtos" class="hover:underline">Produtos</a>
-                </li>
-                <li>
-                    <a href="#sobre" class="hover:underline">Sobre Nós</a>
-                </li>
-                <li>
-                    <a href="#contato" class="hover:underline">Contato</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+<header class="bg-p-blue text-tan p-4" id="header">
+
 </header>
 
 <main class="container mx-auto p-4">
