--- a/index.html
+++ b/index.html
@@ -10,26 +10,7 @@
     <link href="/styles/custom.css" rel="stylesheet">
 </head>
 <body class="bg-gray-50">
-<header class="bg-l-orange text-tan p-4">
-    <div class="container mx-auto">
-        <img src="" alt="">
-        <nav class="mt-2">
-            <ul class="flex space-x-4">
-                <li>
-                    <a href="#inicio" class="hover:underline">Início</a>
-                </li>
-                <li>
-                    <a href="#produtos" class="hover:underline">Produtos</a>
-                </li>
-                <li>
-                    <a href="about.html" class="hover:underline">Sobre Nós</a>
-                </li>
-                <li>
-                    <a href="about.html#contato" class="hover:underline">Contato</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+<header class="bg-l-orange text-tan p-4" id="header">
 </header>
 
 <main class="container mx-auto p-4">
