feat/update products + contact information

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link href="/styles/custom.css" rel="stylesheet">
 </head>
 <body class="bg-gray-50">
-<header class="bg-p-blue text-tan p-4" id="header">
+<header class="bg-l-orange text-tan p-4" id="header">
 
 </header>
 
@@ -25,12 +25,24 @@
     <section id="contato" class="py-8">
         <h2 class="text-2xl font-bold mb-4">Contate-nos</h2>
         <p class="text-gray-700">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.
+            <a href="https://api.whatsapp.com/send/?phone=5547997108079&text&type=phone_number&app_absent=0">
+                Vendas e Orçamentos
+            </a>
+        </p>
+        <p class="text-gray-700">
+            <a href="https://api.whatsapp.com/send/?phone=5547999293088&text&type=phone_number&app_absent=0">
+                Financeiro
+            </a>
+        </p>
+        <p class="text-gray-700 justify-center">
+            <a href="https://api.whatsapp.com/send/?phone=5547996246010&text&type=phone_number&app_absent=0">
+                Assistência
+            </a>
         </p>
     </section>
 </main>
 
-<footer class="bg-s-blue text-tan p-4 mt-8">
+<footer class="bg-d-orange text-tan p-4 mt-8">
     <div class="container mx-auto text-center">
         <p>&copy; 2025 Nico Eletro - Todos os direitos reservados</p>
         <p class="text-sm text-tan mt-2">Projeto desenvolvido para o curso de Sistemas de Informação - UNIDAVI</p>
