--- a/about.html
+++ b/about.html
@@ -24,21 +24,20 @@
 
     <section id="contato" class="py-8">
         <h2 class="text-2xl font-bold mb-4">Contate-nos</h2>
-        <p class="text-gray-700">
-            <a href="https://api.whatsapp.com/send/?phone=5547997108079&text&type=phone_number&app_absent=0">
+        <div class="flex justify-between md:flex-col">
+            <a class="text-p-blue"
+               href="https://api.whatsapp.com/send/?phone=5547997108079&text&type=phone_number&app_absent=0">
                 Vendas e Orçamentos
             </a>
-        </p>
-        <p class="text-gray-700">
-            <a href="https://api.whatsapp.com/send/?phone=5547999293088&text&type=phone_number&app_absent=0">
+            <a class="text-p-blue"
+               href="https://api.whatsapp.com/send/?phone=5547999293088&text&type=phone_number&app_absent=0">
                 Financeiro
             </a>
-        </p>
-        <p class="text-gray-700 justify-center">
-            <a href="https://api.whatsapp.com/send/?phone=5547996246010&text&type=phone_number&app_absent=0">
+            <a class="text-p-blue"
+               href="https://api.whatsapp.com/send/?phone=5547996246010&text&type=phone_number&app_absent=0">
                 Assistência
             </a>
-        </p>
+        </div>
     </section>
 </main>
 
