feat/restyle contact links

--- a/about.html
+++ b/about.html
@@ -25,15 +25,15 @@
     <section id="contato" class="py-8">
         <h2 class="text-2xl font-bold mb-4">Contate-nos</h2>
         <div class="flex justify-between md:flex-col">
-            <a class="text-p-blue"
+            <a class="text-p-blue font-semibold"
                href="https://api.whatsapp.com/send/?phone=5547997108079&text&type=phone_number&app_absent=0">
                 Vendas e Orçamentos
             </a>
-            <a class="text-p-blue"
+            <a class="text-p-blue font-semibold"
                href="https://api.whatsapp.com/send/?phone=5547999293088&text&type=phone_number&app_absent=0">
                 Financeiro
             </a>
-            <a class="text-p-blue"
+            <a class="text-p-blue font-semibold"
                href="https://api.whatsapp.com/send/?phone=5547996246010&text&type=phone_number&app_absent=0">
                 Assistência
             </a>
