--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
 </header>
 
-<main class="container mx-auto p-4">
+<main class="container mx-auto p-4 h-full">
     <section id="sobre" class="py-8">
         <h2 class="text-3xl font-bold mb-4">Sobre nós</h2>
         <p class="text-gray-700">
@@ -52,7 +52,7 @@
     </section>
 </main>
 
-<footer class="bg-d-orange text-tan p-4 mt-8">
+<footer class="bg-d-orange text-tan p-4 mt-8 fixed bottom-0">
     <div class="container mx-auto text-center">
         <p>&copy; 2025 Nico Eletro - Todos os direitos reservados</p>
         <p class="text-sm text-tan mt-2">Projeto desenvolvido para o curso de Sistemas de Informação - UNIDAVI</p>
